Config: Update .gitignore and Procfile for Heroku backend deployment

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,15 @@ yarn-error.log*
 .vscode/
 *.swp
 *.swo
+
+# Python specific
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+*.egg-info/
+dist/
+build/
+*.egg
+venv/
+env/
