fix: Use %(here)s for script_location in alembic.ini

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 # path to migration scripts
-script_location = alembic
+script_location = %(here)s/alembic
 
 # template for migration file names
 # file_template = %%(rev)s_%%(slug)s
