--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn==0.23.2
 pydantic==2.4.2
 sqlalchemy==2.0.23
 python-dotenv==1.0.0
+httpx==0.25.2
 langchain==0.0.312
 openai==1.2.4
 tiktoken==0.5.1
